# purple

./: .gitignore  BUGS.md  CHANGELOG.md  Cargo.toml  README.md  ci.sh  clippy.toml  demo.webm  deny.toml  flake.nix  llms.txt
.github/workflows/: aur.yml  ci.yml  main.yml  release.yml  site.yml
fuzz/fuzz_targets/: fuzz_ssh_config.rs
scripts/: check-alias-caches.sh  check-aur-pkgbuild-drift.sh  check-conventions.sh  check-design-system.sh  check-keybindings.sh  check-messages.sh  precommit.sh  update-golden.sh
scripts/site/: build.mjs
site/: page.html  worker.ts
src/: animation.rs  app.rs  askpass.rs  askpass_tests.rs  cli.rs  cli_args.rs  clipboard.rs  connection.rs  containers.rs  containers_tests.rs  demo.rs  demo_flag.rs  event.rs  file_browser.rs  fs_util.rs  handler.rs  history.rs  import.rs  key_activity.rs  key_push.rs  lib.rs  logging.rs  main.rs  main_tests.rs  mcp.rs  mcp_tests.rs  messages.rs  onboarding.rs  ping.rs  preferences.rs  snippet.rs  snippet_tests.rs  ssh_context.rs  ssh_keys.rs  tcp_diag.rs  tui.rs  tui_loop.rs  tunnel.rs  tunnel_live.rs  update.rs  (+4 more)
src/app/: baselines.rs  container_state.rs  containers_overview.rs  display_list.rs  file_browser_state.rs  form_state.rs  forms.rs  groups.rs  host_state.rs  hosts.rs  jump.rs  key_push_state.rs  keys_state.rs  pickers.rs  ping.rs  provider_state.rs  reload_state.rs  screen.rs  search.rs  selection.rs  snippet_state.rs  status_state.rs  tag_state.rs  tests.rs  tunnel_state.rs  ui_state.rs  update.rs  vault.rs
src/handler/: bulk_tag_editor.rs  command_palette.rs  confirm.rs  container_exec_prompt.rs  container_host_picker.rs  container_logs.rs  containers.rs  containers_overview.rs  ctx.rs  event_loop.rs  file_browser.rs  help.rs  host_detail.rs  host_form.rs  host_list.rs  jump.rs  key_push_picker.rs  keys_overview.rs  picker.rs  ping.rs  provider.rs  snippet.rs  sync.rs  tag_picker.rs  tests.rs  theme_picker.rs  tunnel.rs  tunnel_host_picker.rs  tunnels_overview.rs  welcome.rs  whats_new.rs
src/messages/: cli.rs  container.rs  footer.rs  host.rs  picker.rs  provider.rs  snippet.rs  tunnel.rs  vault.rs  whats_new.rs
src/providers/: aws.rs  aws_tests.rs  azure.rs  azure_tests.rs  config.rs  config_tests.rs  digitalocean.rs  gcp.rs  gcp_tests.rs  hetzner.rs  i3d.rs  kind.rs  leaseweb.rs  leaseweb_tests.rs  linode.rs  mod.rs  mod_tests.rs  oracle.rs  oracle_tests.rs  ovh.rs  proxmox.rs  proxmox_tests.rs  scaleway.rs  sync.rs  sync_tests.rs  tailscale.rs  tailscale_tests.rs  transip.rs  upcloud.rs  upcloud_tests.rs  vultr.rs
src/runtime/: env.rs  helpers.rs  launcher.rs  mod.rs
src/ssh_config/: directive_category.rs  host_block.rs  mod.rs  model.rs  model_tests.rs  parser.rs  pattern.rs  repair.rs  writer.rs
src/ui/: activity_chart.rs  bulk_tag_editor.rs  confirm_dialog.rs  container_action_confirm.rs  container_exec_prompt.rs  container_host_picker.rs  container_logs.rs  containers.rs  containers_overview.rs  design.rs  detail_panel.rs  detail_panel_tests.rs  file_browser.rs  help.rs  host_detail.rs  host_form.rs  host_list.rs  host_list_tests.rs  jump.rs  key_detail.rs  key_list.rs  key_push_picker.rs  mod.rs  picker_helpers.rs  provider_list.rs  snippet_form.rs  snippet_output.rs  snippet_param_form.rs  snippet_picker.rs  tag_picker.rs  theme.rs  theme_picker.rs  theme_tests.rs  (+8 more)
tests/: mcp_e2e.rs  openssh_ground_truth.rs  proptest_mutations.rs  proptest_ssh_config.rs  proton_askpass_e2e.rs  proton_live_smoke.rs  proton_logging_e2e.rs  provider_group_headers.rs  provider_scenario_matrix.rs  real_world_configs.rs  roundtrip_fidelity.rs  smoke_tui.sh  vault_ssh_config_safety.rs
(+113 files in other folders)
