[package]
name = "purple-ssh"
version = "2.0.0"
edition = "2024"
description = "Manage SSH servers, transfer files and sync from 10 cloud providers. TUI that edits ~/.ssh/config with round-trip fidelity. Search, connect, browse remote files, run commands across hosts. Password management via keychain, 1Password, Bitwarden, pass, Vault."
license = "MIT"
repository = "https://github.com/erickochen/purple"
homepage = "https://getpurple.sh"
readme = "README.md"
keywords = ["ssh", "ssh-config", "tui", "ssh-manager", "devops"]
categories = ["command-line-utilities", "network-programming", "development-tools"]
rust-version = "1.85"
exclude = [".github/", ".gitignore"]

[lib]
name = "purple_ssh"
path = "src/lib.rs"

[[bin]]
name = "purple"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
glob = "0.3"
anyhow = "1"
thiserror = "2"
unicode-width = "0.2.2"
ureq = { version = "2", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22"

[profile.release]
strip = true
lto = true
opt-level = "z"
